--- a/auditbeat-rules.d/auditbeat.yml
+++ b/auditbeat-rules.d/auditbeat.yml
@@ -63,4 +63,5 @@ processors:
 
 # Sets log level. The default log level is info.
 # Available log levels are: error, warning, info, debug
-#logging.level: debug
+logging.level: info
+logging.to_syslog: true
